--- a/workflowexecutor/conf/application.conf
+++ b/workflowexecutor/conf/application.conf
@@ -44,9 +44,11 @@ pyspark {
   # They will be prefixed with pyspark's path.
   # TODO This should be auto-derived from current Spark (or somehow wildcarded)
   # so we don't need to remember this every spark update.
+  # 0.9 py4j is in Spark 1.6.1
   # 0.10.1 py4j is in Spark 2.0.0
   # 0.10.3 py4j is in Spark 2.0.1 and Spark 2.0.2
   python-path = [
+    "lib/py4j-0.9-src.zip",
     "lib/py4j-0.10.1-src.zip",
     "lib/py4j-0.10.3-src.zip",
     "build"
